--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -13,7 +13,7 @@ asarUnpack:
   - resources/**
 win:
   executableName: DNSConnector
-  icon: "./resources/icon.png"
+  icon: './resources/icon.png'
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
