--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnsbrowser",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "syugeeeeeeeeeei",
@@ -31,6 +31,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle-group": "^1.1.11",
     "@tailwindcss/vite": "^4.1.10",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
