[main] パッチバージョンアップ

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && dotenv -- electron-builder --win",
+    "build:win": "yarn run build && dotenv -- electron-builder --win --publish always",
     "build:mac": "electron-vite build && dotenv -- electron-builder --mac",
     "build:linux": "electron-vite build && dotenv -- electron-builder --linux"
   },
